FIX Display area min-height set to avoid image overflow for some device size portion

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -59,6 +59,7 @@ margin-bottom: 0;
 .display-area {
     width: 60%;
     max-width: 700px;
+    min-height: 250px;
     border: 1px solid black;
     border-radius: 5%;
     margin: auto;
